--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -48,3 +48,36 @@ button {
   color: white;
   text-decoration: underline;
 }
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr auto;
+}
+
+.signoff {
+  align-self: start;
+}
+
+.main {
+  display: grid;
+  grid-template-rows: auto auto auto;
+  justify-items: center;
+  align-items: center;
+  row-gap: 2rem;
+  padding: 2rem;
+}
+
+input[type=file]::file-selector-button {
+  margin-right: 20px;
+  border: none;
+  background: #084cdf;
+  padding: 10px 20px;
+  border-radius: 10px;
+  color: #fff;
+  cursor: pointer;
+  transition: background .2s ease-in-out;
+}
+
+input[type=file]::file-selector-button:hover {
+  background: #0d45a5;
+}
